--- a/public/assets/css/movie_style.css
+++ b/public/assets/css/movie_style.css
@@ -1,9 +1,10 @@
 body {
-	background-image: url('/assets/img/background.jpg');
+	/*background-image: url('/assets/img/background.jpg');*/
+	background-image: url('http://thewongcouple.com/our-wedding/images/CinemaBackground.jpg');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-attachment: fixed;
-	user-select: none;
+	/*user-select: none;*/
 }
 
 .movie {
@@ -14,7 +15,7 @@ body {
 	font-size: 24px;
 	font-family: 'Nothing You Could Do', cursive;
 	padding-left: 15px;
-	border: 3px solid chocolate;
+	border: 3px solid #A80000;
 }
 
 img {
@@ -32,7 +33,7 @@ img {
 
 .sectionTitle{
 	background:orange;
-	border: 3px solid chocolate;
+	border: 3px solid #A80000;
 	padding: 5px;
 	border-radius: 3px;
 	width: 50%;
@@ -44,15 +45,26 @@ img {
 #title {
 	margin-top: 40px;
     margin-bottom: 35px;
-    font-size: 110px;
+    font-size: 140px;
     font-weight: bold;
     font-family: 'Bigelow Rules', cursive;
     text-shadow: 3px 3px rgba(0,0,0,1);
     letter-spacing: 3px;
+    text-shadow: 1px 1px 0px #A80000,
+    2px 2px 0px #A80000,
+    3px 3px 0px #A80000,
+    4px 4px 0px #A80000,
+    5px 5px 0px #A80000,
+    6px 6px 0px #A80000,
+    7px 7px 0px #A80000,
+    8px 8px 3px rgba(255,255,255,0.6);
+/*   -webkit-text-fill-color: white;  
+   -webkit-text-stroke-width: 0.1px;
+   -webkit-text-stroke-color: #A80000;*/
 }
 
 #submit	{
-	background: chocolate;
+	background: #A80000;
 	margin-bottom: 10px;
 	font-family: 'Bigelow Rules', cursive;
 	font-size: 40px;
@@ -60,14 +72,14 @@ img {
 }
 
 .watch {
-	background: chocolate;
+	background: #A80000;
 	font-size: 18px;
 }
 
 #label {
 	font-size: 26px;
 	font-style: italic;
-	color: brown;
+	color: white;
 	font-family: 'Nothing You Could Do', cursive;
 	font-weight: 600;
 	letter-spacing: 2px;
@@ -84,7 +96,7 @@ img {
 	background: white;
 	margin-bottom: 20px;
 	border-radius: 10px;
-	border: 2px solid chocolate;
+	border: 2px solid #A80000;
 }
 
 .bubble:after {
@@ -110,7 +122,7 @@ img {
 	top: 99%;
 	left: 50%;
 	transform: translateX(-50%);
-	border-top: 20px solid chocolate;
+	border-top: 20px solid #A80000;
 	border-right: 20px solid transparent;
 	border-bottom: 20px solid transparent;
 	border-left: 20px solid transparent;
