--- a/public/assets/css/movie_style.css
+++ b/public/assets/css/movie_style.css
@@ -3,6 +3,11 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-attachment: fixed;
+	box-sizing: border-box;
+}
+
+.container {
+	width: 90%;
 }
 
 .movie {
@@ -10,7 +15,7 @@ body {
 	height: 45px;
 	margin: 15px;
 	line-height: 36px;
-	font-size: 24px;
+	font-size: 26px;
 	font-family: 'Nothing You Could Do', cursive;
 	padding-left: 15px;
 	border: 3px solid #A80000;
@@ -71,6 +76,17 @@ img {
 	font-size: 18px;
 }
 
+.watchedMovie {
+	float:left;
+}
+
+.dateTime {
+	float: right;
+	margin-right: 15px;
+	font-family: arial;
+	font-size: 16px;
+}
+
 #label {
 	font-size: 26px;
 	font-style: italic;
@@ -122,7 +138,7 @@ img {
 	border-left: 20px solid transparent;
 }
 
-#movie {
+#movieInput {
 	position: absolute;
 	width: 95%;
 	border:none;
@@ -147,4 +163,99 @@ textarea::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 }
 textarea::-moz-placeholder { /* Firefox 19+ */
   color: brown;
+}
+
+.movieName {
+	cursor: pointer;
+}
+
+
+/************************movieModal CSS************************/
+
+#movieModal {
+	width: 70%;
+	min-height: 50vh;
+	background: orange;
+	border: 4px solid #A80000;
+	display: none;
+	position: absolute;
+	transform: translate(-50%);
+	padding: 30px 0px;
+	color: #A80000;
+}
+
+
+#movieModal:after {
+	content: '';
+	position: absolute;
+	left: 4px;
+	bottom: 0px;
+	height: 0;
+	width: 0;
+	border: 20px solid black;
+	border-top-color: transparent;
+	border-right-color: transparent;
+	border-bottom-color: orange;
+	border-left-color: transparent;
+	transform: translate(-50%);
+}
+
+#movieModal:before {
+	content: '';
+	position: absolute;
+	left: -4px;
+	bottom: -4px;
+	height: 0;
+	width: 0;
+	border: 20px solid black;
+	border-top-color: transparent;
+	border-right-color: transparent;
+	border-bottom-color: #A80000;
+	border-left-color: transparent;
+	transform: translate(-50%);
+}
+
+.close {
+	position: absolute;
+	top: 1%;
+	right: 2%;
+
+}
+
+#movieTitle {
+	font-size: 45px;
+}
+
+#movieRatings {
+	list-style: none;
+	display: inline;
+}
+
+li {
+	display: inline;
+	padding: 0 5px;
+	font-size: 16px;
+}
+
+#movieActors {
+	font-size: 16px;
+}
+
+#moviePlot {
+	width: 80%;
+	margin: 20px auto;
+	font-size: 18px;
+	background: tan;
+	padding: 15px;
+	border-radius: 5px
+}
+
+#trailer {
+	width: 60%;
+	height:300px;
+}
+
+#nextButton{
+	width: 60%;
+	margin:0 auto;
 }
