--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Watch-da-movie</title>
+	<link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Bigelow+Rules|Nothing+You+Could+Do" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
