--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,7 @@
 			{{#each movies}}
 				{{#unless watched}}
 					<div class="movie text-shadow">
-					<p data-movieName="{{movie_name}}" class="movieListItem">{{this.id}}. <span class="movieName">{{movie_name}}</span><button class="watch pull-right btn btn-danger" id="{{this.id}}">Watched it!</button></p>
+						<p  class="movieListItem">{{this.id}}. <span class="movieName" data-movieName="{{movie_name}}">{{movie_name}}</span><button class="watch pull-right btn btn-danger" id="{{this.id}}">Watched it!</button></p>
 
 					</div>
 				{{/unless}}
