--- a/public/assets/css/movie_style.css
+++ b/public/assets/css/movie_style.css
@@ -3,7 +3,8 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	background-attachment: fixed;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 .container {
@@ -25,7 +26,8 @@ img {
 	height: 200px;
 	position: absolute;
 	left:50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
 	z-index: -1;
 }
 
@@ -54,13 +56,13 @@ img {
     text-shadow: 3px 3px rgba(0,0,0,1);
     letter-spacing: 3px;
     text-shadow: 1px 1px 0px #A80000,
-    2px 2px 0px #A80000,
-    3px 3px 0px #A80000,
-    4px 4px 0px #A80000,
-    5px 5px 0px #A80000,
-    6px 6px 0px #A80000,
-    7px 7px 0px #A80000,
-    8px 8px 3px rgba(255,255,255,0.6);
+			     2px 2px 0px #A80000,
+			     3px 3px 0px #A80000,
+			     4px 4px 0px #A80000,
+			     5px 5px 0px #A80000,
+			     6px 6px 0px #A80000,
+			     7px 7px 0px #A80000,
+			     8px 8px 3px rgba(255,255,255,0.6);
 }
 
 #submit	{
@@ -117,7 +119,8 @@ img {
 	width: 0px;
 	top: 96%;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
 	border-top: 20px solid white;
 	border-right: 20px solid transparent;
 	border-bottom: 20px solid transparent;
@@ -131,7 +134,8 @@ img {
 	width: 0px;
 	top: 100%;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
 	border-top: 20px solid #A80000;
 	border-right: 20px solid transparent;
 	border-bottom: 20px solid transparent;
@@ -146,7 +150,8 @@ img {
 	background: transparent;
 	margin: auto;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
 	resize: none;
 	font-size: 20px;
 	line-height: 40px;
@@ -161,6 +166,7 @@ textarea:focus {
 textarea::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: brown;
 }
+
 textarea::-moz-placeholder { /* Firefox 19+ */
   color: brown;
 }
@@ -178,48 +184,21 @@ textarea::-moz-placeholder { /* Firefox 19+ */
 	background: orange;
 	border: 4px solid #A80000;
 	display: none;
-	position: absolute;
-	transform: translate(-50%);
+	position: fixed;
+	top: 50%;
+	left: 50%;
+
+	-webkit-transform: translate(-50%, -50%);
+
+	        transform: translate(-50%, -50%);
 	padding: 30px 0px;
 	color: #A80000;
-}
-
-
-#movieModal:after {
-	content: '';
-	position: absolute;
-	left: 4px;
-	bottom: 0px;
-	height: 0;
-	width: 0;
-	border: 20px solid black;
-	border-top-color: transparent;
-	border-right-color: transparent;
-	border-bottom-color: orange;
-	border-left-color: transparent;
-	transform: translate(-50%);
-}
-
-#movieModal:before {
-	content: '';
-	position: absolute;
-	left: -4px;
-	bottom: -4px;
-	height: 0;
-	width: 0;
-	border: 20px solid black;
-	border-top-color: transparent;
-	border-right-color: transparent;
-	border-bottom-color: #A80000;
-	border-left-color: transparent;
-	transform: translate(-50%);
 }
 
 .close {
 	position: absolute;
 	top: 1%;
 	right: 2%;
-
 }
 
 #movieTitle {
