--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 
 <div class="container ">
 	<img src="" alt="" class="">
-	<h1 class="text-center text-shadow" id="title">Watch-Da-Movie!</h1>
+	<h1 class="text-center text-shadow" id="title">Watcha-Da-Movie!</h1>
 	<div class="row">
 		<h3 id="label" class="text-shadow text-center col-sm-offset-3 col-sm-6">Enter a movie, or say "Add" and then then the name of your movie:</h3>
 		<form class="col-sm-offset-3 col-sm-6">
