--- a/public/assets/css/movie_style.css
+++ b/public/assets/css/movie_style.css
@@ -7,6 +7,25 @@ body {
 	        box-sizing: border-box;
 }
 
+#load-screen {
+	background-color: black;
+	position: fixed;
+	top:0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 1000;
+}
+
+#loading {
+	color: white;
+	font-size: 50px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
 .container {
 	width: 90%;
 }
