--- a/public/assets/css/movie_style.css
+++ b/public/assets/css/movie_style.css
@@ -65,12 +65,17 @@ img {
 			     8px 8px 3px rgba(255,255,255,0.6);
 }
 
+.btn {
+	border-radius: 0px;
+}
+
 #submit	{
 	background: #A80000;
 	margin-bottom: 10px;
 	font-family: 'Bigelow Rules', cursive;
 	font-size: 40px;
 	padding: 0;
+	border-radius: 4px;
 }
 
 .watch {
